Issue #3203861 by saschaeggi: [layout_paragraphs] Paragraph selection overflow issue

--- a/styles/components/_entity_reference_layout.scss
+++ b/styles/components/_entity_reference_layout.scss
@@ -403,7 +403,6 @@
   &:active,
   &:focus {
     border-color: var(--colorGinFocus);
-    z-index: 1;
 
     .layout-label {
       display: block;
@@ -451,8 +450,12 @@
     }
 
     // Item in layout
-    .layout-paragraphs-item:not(:last-of-type) {
-      margin-bottom: 1rem;
+    .layout-paragraphs-item {
+      margin-bottom: 2rem;
+
+      &:last-of-type {
+        margin-bottom: 1rem;
+      }
     }
   }
 
@@ -461,6 +464,12 @@
       margin: 0;
     }
   }
+
+  .layout-handle,
+  .layout-up,
+  .layout-down {
+    font-size: 0;
+  }
 }
 
 /*
@@ -468,7 +477,7 @@
 */
 
 .erl-disabled-wrapper,
-.layout-paragraphs-disabled-items__items {
+.layout-paragraphs-disabled-items > .fieldset__wrapper {
   padding: 1rem;
   border: 1px dashed var(--colorGinLayer2Border);
   border-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='2' ry='2' stroke='%23999999' stroke-width='2' stroke-dasharray='4%2c 8' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e") 1;
@@ -479,6 +488,10 @@
       margin-bottom: 1rem;
     }
   }
+}
+
+.layout-paragraphs-disabled-items__items {
+  padding: 0;
 }
 
 .erl-disabled-wrapper .erl-disabled-items__description {
@@ -496,7 +509,8 @@
 // Basic item styles
 .erl-item,
 .layout-paragraphs-item {
-  .paragraph-type-label {
+  .paragraph-type-label,
+  .paragraph-type--label {
     margin: -1px;
     position: absolute;
     top: 12px;
@@ -504,7 +518,8 @@
     transform: translate(-50%);
     border: 0 none;
     font-style: normal;
-    color: #999;
+    color: var(--colorGinTextLight);
+    opacity: .75;
   }
 
   .layout-controls {
@@ -573,13 +588,15 @@
     }
   }
 
-  .paragraph-layout-label {
+  .paragraph-layout-label,
+  .paragraph-layout--label {
     opacity: .6;
     position: absolute;
     top: 12px;
     transform: translateX(-50%);
     font-style: normal;
     font-weight: bold !important;
+    color: var(--colorGinText);
     padding: 0;
   }
 
